Fixed some formatting.  Now the labels are right aligned and wide enough that they don't wrap.`

--- a/abs/public/stylesheets/main.css
+++ b/abs/public/stylesheets/main.css
@@ -2,6 +2,10 @@ h1 {
 	text-align: center;
 }
 
+label {
+	text-align: right;
+}
+
 .hide-span {
 	width: 0;
 	margin-left: -1px;
